fix css for spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,36 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+/* 
+font declarations
+*/
+
+@font-face {
+	font-family: 'ubuntu';
+	src: url('../webfonts/Ubuntu/Ubuntu-Regular.ttf');
+	font-style: normal;
+	font-weight: 100;
+}
+
+@font-face {
+	font-family: 'ubuntu';
+	src: url('../webfonts/Ubuntu/Ubuntu-Bold.ttf');
+	font-style: bold;
+	font-weight: 600;
+}
+
+@font-face {
+	font-family: 'ubuntu';
+	src: url('../webfonts/Ubuntu/Ubuntu-BoldItalic.ttf');
+	font-style: italic;
+	font-weight: 600;
+}
+
+@font-face {
+	font-family: 'oswald';
+	src: url('../webfonts/Oswald/Oswald-VariableFont_wght.ttf');
+	font-style: normal;
+}
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -24,7 +54,11 @@ section, summary, time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-	font-family: 'Playfair Display';
+	font-family: 'oswald';
+}
+
+h1, h2, h3, h4, h5, h6, li, ul {
+	font-family: 'ubuntu';
 }
 
 article, aside, details, figcaption, figure,
@@ -124,7 +158,8 @@ input, select, textarea {
 
 	body {
 		background-color: #935d8c;
-		color: rgba(255, 255, 255, 0.8);
+		color: rgba(255, 255, 255, 0.9);
+		text-shadow: 0px 0px 50px black;
 	}
 
 	body, input, select, textarea {
@@ -3164,7 +3199,7 @@ input, select, textarea {
 				font-size: 8em;
 				user-select: none;
 				letter-spacing: 6px;
-				font-weight: 900;
+				font-weight: 600;
 				color: white;
 			}
 
@@ -3776,9 +3811,9 @@ input, select, textarea {
 		-webkit-flex-wrap: wrap;
 		-ms-flex-wrap: wrap;
 		flex-wrap: wrap;
-		padding: 5em 5em 3em 5em ;
+		padding: 2em 5em 2em 5em ;
 		width: calc(100% + 2em);
-		margin: 0 0 3em -2em;
+		margin: 0 0 0 -2em;
 	}
 
 		#footer > * {
